cititechd/force-app/main/default/objects/Competitor_Account__c/Competitor_Account__c.object-meta.xml
<CustomObject>
    <description>Junction object meant to connect the Competitor records to our Account records</description>
    <label>Competitor Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>