cititechd/force-app/main/default/objects/Competitor_Account__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>Populate the competitor record here</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitor Accounts</relationshipLabel>
    <relationshipName>Competitor_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>