cititechd/force-app/main/default/objects/Competitor_Account__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description/Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>